tests/baselines/reference/objectLiteralParameterResolution.errors.txt
tests/cases/compiler/objectLiteralParameterResolution.ts(9,14): error TS2304: Cannot find name 'wrapSuccessCallback'.
tests/cases/compiler/objectLiteralParameterResolution.ts(9,34): error TS2304: Cannot find name 'requestContext'.
tests/cases/compiler/objectLiteralParameterResolution.ts(9,50): error TS2304: Cannot find name 'callback'.
tests/cases/compiler/objectLiteralParameterResolution.ts(10,12): error TS2304: Cannot find name 'wrapErrorCallback'.
tests/cases/compiler/objectLiteralParameterResolution.ts(10,30): error TS2304: Cannot find name 'requestContext'.
tests/cases/compiler/objectLiteralParameterResolution.ts(10,46): error TS2304: Cannot find name 'errorCallback'.


==== tests/cases/compiler/objectLiteralParameterResolution.ts (6 errors) ====
    interface Foo{
        extend<T>(target: T, ...objs: any[]): T;
        extend<T>(deep: boolean, target: T, ...objs: any[]): T;
    }
    declare var $: Foo;
    var s = $.extend({
        type: "GET" ,
        data: "data" ,
        success: wrapSuccessCallback(requestContext, callback) ,
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'wrapSuccessCallback'.
                                     ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'requestContext'.
                                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'callback'.
        error: wrapErrorCallback(requestContext, errorCallback) ,
               ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'wrapErrorCallback'.
                                 ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'requestContext'.
                                                 ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'errorCallback'.
        dataType: "json" ,
        converters: { "text json": "" },
        traditional: true ,
        timeout: 12,
        }, "");
    